<resources>
    <!--语音设置-->
    <string name="setting_main_title">Voyah AI语音工程模式</string>
    <string name="main_tab_dump">&#160;&#160;音频+日志保存&#160;&#160;&#160;</string>
    <string name="main_tab_mic_check">&#160;&#160;Mic检测&#160;&#160;&#160;</string>

    <string name="settings_item_trace_panel">对话记录跟踪</string>
    <string name="settings_item_trace_panel_tips">开启对话记录跟踪面板，实时查看对话记录.</string>

    <string name="settings_item_fail_wakeup">误唤醒音频采集</string>
    <string name="settings_item_fail_wakeup_tips">开启后将实时保存误唤醒音频.</string>

    <string name="settings_item_va_audio">语音专用音频采集</string>
    <string name="settings_item_va_audio_tips">开启后将实时保存语音专用音频.</string>

    <string name="settings_item_all_network">所有网络通道切换</string>
    <string name="settings_item_all_network_tips">开启后允许语音使用任意网络，关则仅免费通道可用.</string>

    <string name="settings_item_tts_log">微软TTS日志</string>
    <string name="settings_item_tts_log_tips">开启后将实时保存微软TTS日志.</string>

    <string name="settings_item_pre_env">语音Pre环境</string>
    <string name="settings_item_pre_env_tips">开启后将使用语音pre环境，关则默认环境.</string>

    <string name="float_trace_panel_title">语音对话记录跟踪</string>
    <string name="float_record_tip_title">正在音频采集中</string>
</resources>
